syntax = "proto2";

package advantage.protos;

import "advantage/protos/agents/deep_q_agent.proto";

message Agents {
    oneof agent {
        DeepQAgent deepQAgent = 1;
    }

    required float discount_factor = 2;

    required string name_scope = 3;

}
